force-app/main/default/objects/Contact/fields/boothVisitor__c.field-meta.xml
<CustomField>
    <fullName>boothVisitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ブース来場の場合、webToLeadにこの値をtrueとするように仕込む</description>
    <label>ブース来場</label>
    <type>Checkbox</type>
</CustomField>