force-app/main/default/objects/Contact/fields/logoimage__c.field-meta.xml
<CustomField>
    <fullName>logoimage__c</fullName>
    <formula>IMAGE( logoURL__c , &quot;ロゴ&quot;)</formula>
    <label>ロゴイメージ</label>
    <type>Text</type>
</CustomField>