force-app/main/default/objects/Contact/fields/logoURL__c.field-meta.xml
<CustomField>
    <fullName>logoURL__c</fullName>
    <label>ロゴURL</label>
    <type>Url</type>
</CustomField>