force-app/main/default/objects/Contact/fields/prospect__c.field-meta.xml
<CustomField>
    <fullName>prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>見込み顧客として商談を開始するためのbool値</description>
    <label>見込み顧客</label>
    <type>Checkbox</type>
</CustomField>